--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1> Welcome to My Page </h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Project</title>
+</head>
+<body>
+<h1>Welcome</h1>
+<p>This is<em>Zoe's<em>Webpage.</p>
+<dl>
+<dt>My Webpage</dt>
+<dd>A resume/portfolio</dd>
+</dl>
+</body>
+</html>
