--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <dt>My Webpage</dt>
 <dd>A resume/portfolio</dd>
 </dl>
+<img src="resume.asp-FINAL-7d61bbc8181747698b3cbb0b2ed6833e.png" alt="Resume" height="42" width"42">
 </body>
 </html>
