--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <dt>My Webpage</dt>
 <dd>A resume/portfolio</dd>
 </dl>
-<img src="resume.asp-FINAL-7d61bbc8181747698b3cbb0b2ed6833e.png" alt="Resume" height="42" width"42">
+<p> My Webpage will contain the following:</p>
+<ul>
+<li>Contact Information</li>
+<li>Introduction</li>
+<li>Education</li>
+<li>Previous Experience</li>
+<li>Skills</li>
+<li>References</li>
+</ul>
 </body>
 </html>
