--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <dt>My Webpage</dt>
 <dd>A resume/portfolio</dd>
 </dl>
-<p> My Resume <sub>will</sub> contain the following:</p>
+<p> My Resume will contain the following:</p>
 <ul>
 <li>Contact Information</li>
 <li>Introduction</li>
