--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Project</title>
 </head>
 <body>
-<h1>Welcome</h1>
+<h1 style="font-family:courier;">Welcome</h1>
 <p>This is <em>Zoe's<em> Webpage.</p>
 <dl>
 <dt>My Webpage</dt>
