--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 <h1 style="font-family:courier;">Welcome</h1>
-<p>This is <em>Zoe's<em> Webpage.</p>
+<p> 
+  {background-colour:#e67775}
+  This is <em>Zoe's<em> Webpage.</p>
 <dl>
 <dt>My Webpage</dt>
 <dd>A resume/portfolio</dd>
