--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
 <li>Skills</li>
 <li>References</li>
 </ul>
+<h2>Contact Information</h2>
+  <p>Phone:</p>
+  <p>Email: wha0006@hazelglencollege.com</p>
+  <p>Address:</p>
 </body>
 </html>
