--- a/index.html
+++ b/index.html
@@ -23,5 +23,32 @@
   <p>Phone:</p>
   <p>Email: wha0006@hazelglencollege.com</p>
   <p>Address:</p>
+<h3>Career Objective/Inrtoduction</h3>
+  <p></p>
+<h4>Education</h4>
+  <p>Hazel Glen College, Year 10</p>
+  <ul>
+    <li>Extension Mathematics</li>
+    <li>Extension Science</li>
+  </ul>
+<h4>Work Experience</h4>
+  <p><b>Volunteering</b> - Community Day at Bupa Aged Care, 2024</p>
+  <p>Hazel Glen College - Doreen</p>
+  <p> My day at the aged care was spent:</p>
+  <ul>
+    <li>Interviewing the residents, gathering their stories and experiences in effort to get to connect on a personal level.
+</li>
+    <li>Engaging in activities and playing games with the elderly.</li>
+  </ul>
+  <p>This helped to develop stronger communication skills by practicing active listening, showing empathy, and adapting conversations to different personalities.</p>
+<p><b>Volunteering</b> - Volunteered at the ‘Diamond Valley Archers’ Archery Club at a ‘This Girl Can’ event and multiple working bees</p>
+<p><b>This Girl Can</b> - 17th of november 2024</p>
+<p><b>Working Bees</b> - 2023 - 2024(participated a few times)</p>
+  <ul>
+    <li>Helped set up archery targets, catering, tables (This Girl Can)</li>
+    <li>Cleaning such as vacuuming, scrubbing walls/windows, dusting shelves, cleaned trophies (Working Bees)</li>
+  </ul>
+<h5>Skills</h5>
+  
 </body>
 </html>
