--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
     <li>Cleaning such as vacuuming, scrubbing walls/windows, dusting shelves, cleaned trophies (Working Bees)</li>
   </ul>
 <h3>Skills</h3>
-  
+  <p><b>Baking & Cooking:</b> Able to prepare a variety of dishes, including mainly middle eastern cuisine. Able to follow recipes/instructions and adapt to dietary needs or preferences (family members with celiac disease and multiple allergies).</p>
+<p><b>Writing (Essays/Opinion Pieces, Analysing, Creative Pieces)</b> Strong ability to research, analyse, and write clear structured written pieces.
+</p>
+<h3>Strengths</h3>
+  <ul>
+    <li>Creativity</li>
+    <li>Communication</li>
+    <li>Attention to detail</li>
+    <li> Organisation</li>
+  </ul>
+  <hs>References</hs>
+  <p>Available upon request</p>
+  <p>Include teachers</p>
 </body>
 </html>
