--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html>
 <head>
 <title>Project</title>
+  <style>
+      body {
+        margin: 5% auto; 
+        background: #f2f2f2; 
+        color: #444444; 
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+        line-height: 1.8; 
+        max-width: 60em;
+      }
+      a {
+        border-bottom: 1px solid #444444; 
+        color: #444444; 
+        text-decoration: none;
+      }
+      a:hover {
+        border-bottom: 0;
+      }
+  </style>
 </head>
 <body>
 <h1 style="font-family:courier;">Welcome</h1>
