--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
       body {
         margin: 5% auto; 
-        background: #f2f2f2; 
+        background: #ffffff; 
         color: #444444; 
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
         line-height: 1.8; 
