--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <body>
-<h1 style="font-family:courier;">Welcome</h1>
+<h1 style="font-family:"Times New Roman";">Welcome</h1>
 <p>This is <em>Zoe's<em> Webpage.</p>
 <dl>
 <dt>My Webpage</dt>
