--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <li>Attention to detail</li>
     <li> Organisation</li>
   </ul>
-  <hs>References</hs>
+  <h3>References</h3>
   <p>Available upon request</p>
   <p>Include teachers</p>
 </body>
