--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <h1 style="font-family:"Times New Roman";">Welcome</h1>
-<p>This is <em>Zoe's<em> Webpage.</p>
+<p><em>This is Zoe's Webpage.</p>
 <dl>
 <dt>My Webpage</dt>
 <dd>A resume/portfolio</dd>
@@ -79,6 +79,6 @@
   </ul>
   <h3>References</h3>
   <p>Available upon request</p>
-  <p>Include teachers</p>
+  <p>Include teachers</em></p>
 </body>
 </html>
