--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <p>Phone:</p>
   <p>Email: wha0006@hazelglencollege.com</p>
   <p>Address:</p>
-<h3>Career Objective/Inrtoduction</h3>
+<h3>Career Objective/Introduction</h3>
   <p></p>
 <h3>Education</h3>
   <p>Hazel Glen College, Year 10</p>
