--- a/index.html
+++ b/index.html
@@ -1,76 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Project</title>
-  <style>
-      body {
-        margin: 5% auto; 
-        background: #ffffff; 
-        color: #444444; 
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
-        line-height: 1.8; 
-        max-width: 48em;
-      }
-      a {
-        border-bottom: 1px solid #444444; 
-        color: #444444; 
-        text-decoration: none;
-      }
-      a:hover {
-        border-bottom: 0;
-      }
-  </style>
+  <title>Project</title>
+  <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
-<h1 style="font-family:"Times New Roman";">Welcome</h1>
-<p><em>This is Zoe's Webpage.</p>
-<dl>
-<dt>My Webpage</dt>
-<dd>A resume/portfolio</dd>
-</dl>
-<p> My Resume will contain the following:</p>
-<ul>
-<li>Contact Information</li>
-<li>Introduction</li>
-<li>Education</li>
-<li>Previous Experience</li>
-<li>Skills</li>
-<li>References</li>
-</ul>
-<h3>Contact Information</h3>
+  <h1 style="font-family:" Times New Roman";">Welcome</h1>
+  <p><em>This is Zoe's Webpage.</p>
+  <dl>
+    <dt>My Webpage</dt>
+    <dd>A resume/portfolio</dd>
+  </dl>
+  <p> My Resume will contain the following:</p>
+  <ul>
+    <li>Contact Information</li>
+    <li>Introduction</li>
+    <li>Education</li>
+    <li>Previous Experience</li>
+    <li>Skills</li>
+    <li>References</li>
+  </ul>
+  <h3>Contact Information</h3>
   <p>Phone:</p>
   <p>Email: wha0006@hazelglencollege.com</p>
   <p>Address:</p>
-<h3>Career Objective/Introduction</h3>
+  <h3>Career Objective/Introduction</h3>
   <p></p>
-<h3>Education</h3>
+  <h3>Education</h3>
   <p>Hazel Glen College, Year 10</p>
   <ul>
     <li>Extension Mathematics</li>
     <li>Extension Science</li>
   </ul>
-<h3>Work Experience</h3>
+  <h3>Work Experience</h3>
   <p><b>Volunteering</b> - Community Day at Bupa Aged Care, 2024</p>
   <p>Hazel Glen College - Doreen</p>
   <p> My day at the aged care was spent:</p>
   <ul>
-    <li>Interviewing the residents, gathering their stories and experiences in effort to get to connect on a personal level.
-</li>
+    <li>Interviewing the residents, gathering their stories and experiences in effort to get to connect on a personal
+      level.
+    </li>
     <li>Engaging in activities and playing games with the elderly.</li>
   </ul>
-  <p>This helped to develop stronger communication skills by practicing active listening, showing empathy, and adapting conversations to different personalities.</p>
-<p><b>Volunteering</b> - Volunteered at the ‘Diamond Valley Archers’ Archery Club at a ‘This Girl Can’ event and multiple working bees</p>
-<p><b>This Girl Can</b> - 17th of november 2024</p>
-<p><b>Working Bees</b> - 2023 - 2024(participated a few times)</p>
+  <p>This helped to develop stronger communication skills by practicing active listening, showing empathy, and adapting
+    conversations to different personalities.</p>
+  <p><b>Volunteering</b> - Volunteered at the ‘Diamond Valley Archers’ Archery Club at a ‘This Girl Can’ event and
+    multiple working bees</p>
+  <p><b>This Girl Can</b> - 17th of november 2024</p>
+  <p><b>Working Bees</b> - 2023 - 2024(participated a few times)</p>
   <ul>
     <li>Helped set up archery targets, catering, tables (This Girl Can)</li>
     <li>Cleaning such as vacuuming, scrubbing walls/windows, dusting shelves, cleaned trophies (Working Bees)</li>
   </ul>
-<h3>Skills</h3>
-  <p><b>Baking & Cooking:</b> Able to prepare a variety of dishes, including mainly middle eastern cuisine. Able to follow recipes/instructions and adapt to dietary needs or preferences (family members with celiac disease and multiple allergies).</p>
-<p><b>Writing (Essays/Opinion Pieces, Analysing, Creative Pieces)</b> Strong ability to research, analyse, and write clear structured written pieces.
-</p>
-<h3>Strengths</h3>
+  <h3>Skills</h3>
+  <p><b>Baking & Cooking:</b> Able to prepare a variety of dishes, including mainly middle eastern cuisine. Able to
+    follow recipes/instructions and adapt to dietary needs or preferences (family members with celiac disease and
+    multiple allergies).</p>
+  <p><b>Writing (Essays/Opinion Pieces, Analysing, Creative Pieces)</b> Strong ability to research, analyse, and write
+    clear structured written pieces.
+  </p>
+  <h3>Strengths</h3>
   <ul>
     <li>Creativity</li>
     <li>Communication</li>
@@ -80,5 +71,12 @@
   <h3>References</h3>
   <p>Available upon request</p>
   <p>Include teachers</em></p>
+  <section>
+    <h1>Portfolio</h1>
+    <ul>
+      <li><a href="yr-9-passion-project.html">Year Nine Passion Project</a></li>
+    </ul>
+  </section>
 </body>
+
 </html>
