--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <p><b>Baking & Cooking:</b> Able to prepare a variety of dishes, including mainly middle eastern cuisine. Able to
     follow recipes/instructions and adapt to dietary needs or preferences (family members with celiac disease and
     multiple allergies).</p>
-  <p><b>Writing (Essays/Opinion Pieces, Analysing, Creative Pieces)</b> Strong ability to research, analyse, and write
+  <p><b>Writing (Essays/Opinion Pieces, Analysing, Creative Pieces):</b> Strong ability to research, analyse, and write
     clear structured written pieces.
   </p>
   <h3>Strengths</h3>
