--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
   <section>
     <h1>Portfolio</h1>
     <ul>
-      <li><a href="yr-9-passion-project.html">Year Nine Passion Project</a></li>
+      <li><a href="yr-9-passion-project.html">Year Nine Passion Project</a></li>]
+      <li><a href="cooking.html">Cooking</a></li>
+      <li><a href="baking.html">Baking</a></li>
+      <li><a href="demo-page.html">Just a lil demo page</a></li>
     </ul>
   </section>
 </body>
