--- a/demo-page.html
+++ b/demo-page.html
@@ -10,6 +10,16 @@
 <h1>Demo Page</h1>
 
 <h3>Text Types</h3>
+    
+<p>
+<h1>This is h1</h1>
+<h2>This is h2</h2>
+<h3>This is h3</h3>
+<h4>This is h4</h4>
+<h5>This is h5</h5>
+<h6>This is h6</h6>
+</p>
+
 
 <h3>Multi Media</h3>
 
