--- a/demo-page.html
+++ b/demo-page.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1>Demo Page</h1>
+<title>Demo Page</title>
 
 <h3>Text Types</h3>
     
@@ -20,6 +20,17 @@
 <h6>This is h6</h6>
 </p>
 
+<p><b>Bold Text</b></p>
+<p><strong>Strong Text</strong></p>
+<p><i>Italic Text</i></p>
+<p><em>Emphasised Text</em></p>
+<p><mark>Marked Text</mark></p>
+<p><small>Small Text</small></p>
+<p><strike>Striked Out Text</strike></p>
+<p><u>Underlined Text</u></p>
+<p><ins>Insetred Text</ins></p>
+<p><sub>Subscript Text</sub></p>
+<p><sup>Superscript Text</sup></p>
 
 <h3>Multi Media</h3>
 
