--- a/demo-page.html
+++ b/demo-page.html
@@ -28,9 +28,11 @@
 <p><small>Small Text</small></p>
 <p><strike>Striked Out Text</strike></p>
 <p><u>Underlined Text</u></p>
-<p><ins>Insetred Text</ins></p>
-<p><sub>Subscript Text</sub></p>
-<p><sup>Superscript Text</sup></p>
+<p><ins>Inserted Text</ins></p>
+<p><sub>Subscript Text</sub> Down there</p>
+<p><sup>Superscript Text</sup> Up there</p>
+
+
 
 <h3>Multi Media</h3>
 
