--- a/demo-page.html
+++ b/demo-page.html
@@ -32,7 +32,7 @@
 <p><sub>Subscript Text</sub> Down there</p>
 <p><sup>Superscript Text</sup> Up there</p>
 
-
+<p>Anchor tag (link to new page): <a href="index.html">Back to first page.</a></p>
 
 <h3>Multi Media</h3>
 
