--- a/demo-page.html
+++ b/demo-page.html
@@ -33,7 +33,7 @@
 <p><sup>Superscript Text</sup> Up there</p>
 
 <p>Anchor tag (link to new page): <a href="index.html">Back to first page.</a></p>
-<p></p>
+<img src="
 
 
 <h3>Multi Media</h3>
