--- a/demo-page.html
+++ b/demo-page.html
@@ -33,8 +33,7 @@
 <p><sup>Superscript Text</sup> Up there</p>
 
 <p>Anchor tag (link to new page): <a href="index.html">Back to first page.</a></p>
-<img src="resume.asp-FINAL-7d61bbc8181747698b3cbb0b2ed6833e.png" alt="Test image" height="42" width="42">
-
+<img src="GitHub-Logo.png" alt="Test Image" height="42" width="42">
 
 <h3>Multi Media</h3>
 
