--- a/demo-page.html
+++ b/demo-page.html
@@ -32,10 +32,38 @@
 <p><sub>Subscript Text</sub> Down there</p>
 <p><sup>Superscript Text</sup> Up there</p>
 
-<p>Anchor tag (link to new page): <a href="index.html">Back to first page.</a></p>
-<img src="GitHub-Logo.png" alt="Test Image" height="300" width="500">
+<h3>Multi Media/Other</h3>
+    <img src="GitHub-Logo.png" alt="Test Image" height="300" width="500">
+    <p>Anchor tag (link to new page): <a href="index.html">Back to first page.</a></p>
+    
+    <p>This is an ordered list</p>
+    <ol>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+    </ol>
+    
+    <p>This is an unordered list</p>
+    <ul>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+    </ul>
+<dl>
+    <dt>Definition</dt>
+    <dd>This is for definitions</dd>
+</dl>
 
-<h3>Multi Media</h3>
+<table>
+<tr>
+<td>Row 1 - Column 1</td>
+<td>Row 1 - Column 2 </td>
+</tr>
+<tr>
+<td>Row 2 - Column 1</td>
+<td>Row 2 - Column 2</td>
+</tr>
+</table>
 
 </body>
 
