--- a/demo-page.html
+++ b/demo-page.html
@@ -57,11 +57,13 @@
 <table>
 <tr>
 <td>Row 1 - Column 1</td>
-<td>Row 1 - Column 2 </td>
+<td>Row 1 - Colunm 2 </td>
+<td>Row 1 - Column 3 </td>
 </tr>
 <tr>
 <td>Row 2 - Column 1</td>
 <td>Row 2 - Column 2</td>
+<td>Row 2 - Column 3</td>
 </tr>
 </table>
 
