--- a/demo-page.html
+++ b/demo-page.html
@@ -55,16 +55,42 @@
 </dl>
 
 <table>
+    <caption>
+        A table
+    </caption>
+    <thead>
+        <th scope="col">Plate No.</th>
+        <th scope="col">Has Potatoes on it</th>
+        <th scope="col">How many Potatoes</th>
+    </thead>
+    <tbody>
 <tr>
-<td>Row 1 - Column 1</td>
-<td>Row 1 - Colunm 2 </td>
-<td>Row 1 - Column 3 </td>
+    <th scope="row">Plate 1</th>
+    <td>Yes</td>
+    <td>9</td>
 </tr>
 <tr>
-<td>Row 2 - Column 1</td>
-<td>Row 2 - Column 2</td>
-<td>Row 2 - Column 3</td>
+    <th scope="row">Plate 2</th>
+    <td>Yes</td>
+    <td>15</td>
 </tr>
+<tr>
+    <th scope="row">Plate 3</th>
+    <td>No</td>
+    <td>0</td>
+</tr>    
+        <tr>
+    <th scope="row">Plate 4</th>
+    <td>Yes</td>
+    <td>2</td>
+</tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <th scope "row" colspan="2">Average Potatoes</th>
+            <td>6.5</td>
+        </tr>
+    </tfoot>
 </table>
 
 </body>
