--- a/demo-page.html
+++ b/demo-page.html
@@ -33,6 +33,15 @@
 <p><sup>Superscript Text</sup> Up there</p>
 
 <h3>Multi Media/Other</h3>
+<p>Instead of Paragraphs, use:</p>
+<div>
+    The</br>
+    Line</br>
+    Break</br>
+</div> 
+
+
+    
     <img src="GitHub-Logo.png" alt="Test Image" height="300" width="500">
     <p>Anchor tag (link to new page): <a href="index.html">Back to first page.</a></p>
     
