--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <li>Creativity</li>
     <li>Communication</li>
     <li>Attention to detail</li>
-    <li> Organisation</li>
+    <li>Organisation</li>
+    <li>Making awesome webpages</li>
   </ul>
   <h3>References</h3>
   <p>Available upon request</p>
