--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   </ul>
   <h3>Contact Information</h3>
   <p>Phone:</p>
-  <p>Email: wha0006@hazelglencollege.com</p>
+  <p>Email:</p>
   <p>Address:</p>
   <h3>Career Objective/Introduction</h3>
-  <p></p>
+  <p>An Enthusiastic and hardworking year 10 student with a strong work ethic and willingness to learn. Wanting to gain more experience. Very dependaple, organised, and a team player.</p>
   <h3>Education</h3>
   <p>Hazel Glen College, Year 10</p>
   <ul>
