--- a/cooking.html
+++ b/cooking.html
@@ -9,6 +9,7 @@
 <body>
 <h1>Cooking</h1>
     WhatsApp Image 2025-05-16 at 10.27.52 (3).jpeg - Hot Pot
+    WhatsApp Image 2025-05-16 at 10.27.52.jpeg - Persian Dish
 </body>
 
 </html>
