--- a/demo-page.html
+++ b/demo-page.html
@@ -103,7 +103,7 @@
     </tfoot>
 </table>
 
-<video src="video.mkv"></video>
+<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
 
 </body>
 
