--- a/demo-page.html
+++ b/demo-page.html
@@ -103,7 +103,9 @@
     </tfoot>
 </table>
 
-<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
+<video controls width="250">
+    <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
+</video>
 
 </body>
 
