--- a/baking.html
+++ b/baking.html
@@ -9,6 +9,7 @@
 <body>
 <h1>Baking</h1>
     WhatsApp Image 2025-05-16 at 10.27.53.jpeg - Chai Cinnamon Rolls
+    WhatsApp Image 2025-05-16 at 10.27.52 (2).jpeg - Chocolate Chip Muffins
     
 </body>
 
