--- a/cooking.html
+++ b/cooking.html
@@ -10,6 +10,7 @@
 <h1>Cooking</h1>
     WhatsApp Image 2025-05-16 at 10.27.52 (3).jpeg - Hot Pot
     WhatsApp Image 2025-05-16 at 10.27.52.jpeg - Persian Dish
+    WhatsApp Image 2025-05-16 at 10.27.52 (1).jpeg - karjalanpiirakka w/ Egg butter (Finnish Rice Pie)
 </body>
 
 </html>
