--- a/baking.html
+++ b/baking.html
@@ -2,15 +2,19 @@
 <html>
 
 <head>
-    <title>Project</title>
+    <title>Baking</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
 <h1>Baking</h1>
-    WhatsApp Image 2025-05-16 at 10.27.53.jpeg - Chai Cinnamon Rolls
-    WhatsApp Image 2025-05-16 at 10.27.52 (2).jpeg - Chocolate Chip Muffins
-    
+<figure>
+  <img
+    src="chai-cinnamon-rolls.jpeg"
+    alt="Chai Cinnamon Rolls" />
+  <figcaption>Chai Cinnamon Rolls</figcaption>
+</figure>
+     
 </body>
 
 </html>
