--- a/cooking.html
+++ b/cooking.html
@@ -2,16 +2,12 @@
 <html>
 
 <head>
-    <title>Project</title>
+    <title>Cooking</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
-<h1>Cooking</h1>
-    WhatsApp Image 2025-05-16 at 10.27.52 (3).jpeg - Hot Pot
-    WhatsApp Image 2025-05-16 at 10.27.52.jpeg - Persian Dish
-    WhatsApp Image 2025-05-16 at 10.27.52 (1).jpeg - karjalanpiirakka w/ Egg butter (Finnish Rice Pie)
-    WhatsApp Image 2025-05-16 at 10.27.48.jpeg - Tanzanian Inspired Mushroom Curry
+    <h1>Cooking</h1>
 </body>
 
 </html>
