fix picutre link

--- a/baking.html
+++ b/baking.html
@@ -10,8 +10,8 @@
 <h1>Baking</h1>
 <figure>
   <img
-    src="chai-cinnamon-rolls.jpeg"
-    alt="Chai Cinnamon Rolls" />
+    src="images/chai-cinnamon-rolls.jpeg"
+    alt="Picture of chai cinnamon rolls" />
   <figcaption>Chai Cinnamon Rolls</figcaption>
 </figure>
      
