adding stuff to cooking+baking

--- a/baking.html
+++ b/baking.html
@@ -11,10 +11,51 @@
 <figure>
   <img
     src="images/chai-cinnamon-rolls.jpeg"
-    alt="Picture of chai cinnamon rolls" />
+    alt="Picture of chai cinnamon colls" />
   <figcaption>Chai Cinnamon Rolls</figcaption>
 </figure>
-     
+<figure>
+  <img
+    src="images/choco-chip-muffins.jpeg"
+    alt="Picture of chocolate chip muffins" />
+  <figcaption>Chocolate Chip Muffins</figcaption>
+</figure>
+<figure>
+  <img
+    src="images/focaccia.jpeg"
+    alt="Picture of Focaccia" />
+  <figcaption>Focaccia</figcaption>
+</figure>
+<figure>
+  <img
+    src="images/karjalanpiirakak.jpeg"
+    alt="Picture of karjalanpiirakak" />
+  <figcaption>Karjalanpiirakak w/ Egg Butter (Finnish Rice Pies)</figcaption>
+</figure>
+     <figure>
+  <img
+    src="images/raspberry-almond-rolls.jpeg"
+    alt="Picture of raspberry almond rolls" />
+  <figcaption>Raspberry Almond Rolls</figcaption>
+</figure>
+<figure>
+  <img
+    src="images/strawberry-cheesecake-muffins.jpeg"
+    alt="Picture of strawberry cheesecake muffins" />
+  <figcaption>Strawberry Cheesecake Muffins</figcaption>
+</figure>
+<figure>
+  <img
+    src="images/swedish-cardamom-buns.jpeg"
+    alt="Picture of swedish cardamom buns" />
+  <figcaption>Swedish Cardamom Buns</figcaption>
+</figure>
+<figure>
+  <img
+    src="images/brazilian-cheese-bread.jpeg"
+    alt="Picture of brazilian cheeese bread" />
+  <figcaption>Brazilian Cheese Bread</figcaption>
+</figure>
 </body>
 
 </html>
