--- a/cooking.html
+++ b/cooking.html
@@ -8,6 +8,43 @@
 
 <body>
     <h1>Cooking</h1>
+
+    <figure>
+  <img
+    src="images/hot-pot.jpeg"
+    alt="Picture of hot pot" />
+  <figcaption>Hot Pot</figcaption>
+</figure>
+<figure>
+  <img
+    src="images/mushroom-tomato-soup.jpeg"
+    alt="Picture of mushroom tomato soup" />
+  <figcaption>Picture of Mushroom Tomato Soup</figcaption>
+</figure>
+<figure>
+  <img
+    src="images/persian-dish.jpeg"
+    alt="Picture of persian dish" />
+  <figcaption>A Persian Dish</figcaption>
+</figure>
+<figure>
+  <img
+    src="images/pink-sushi.jpeg"
+    alt="Picture of pink sushi" />
+  <figcaption>Pink sushi</figcaption>
+</figure>
+<figure>
+  <img
+    src="images/shrimp-tacos-2.jpeg"
+    alt="Picture of shrimp tacos" />
+  <figcaption>Shrimp Tacos</figcaption>
+</figure>
+<figure>
+  <img
+    src="images/tanzanian-curry-2.jpeg"
+    alt="Picture of tanzanian curry" />
+  <figcaption>Tanzanian Inspired Mushroom Curry</figcaption>
+</figure>
 </body>
 
 </html>
