--- a/demo-page.html
+++ b/demo-page.html
@@ -40,7 +40,7 @@
     Break</br>
 </div> 
 
-    <img src="GitHub-Logo.png" alt="Test Image" height="300" width="500">
+    <img src="images/GitHub-Logo.png" alt="Test Image" height="300" width="500">
     <p>Anchor tag (link to new page): <a href="index.html">Back to first page.</a></p>
     
     <p>This is an ordered list</p>
