--- a/index.html
+++ b/index.html
@@ -7,21 +7,8 @@
 </head>
 
 <body>
-  <h1 style="font-family:" Times New Roman";">Welcome</h1>
-  <p><em>This is Zoe's Webpage.</p>
-  <dl>
-    <dt>My Webpage</dt>
-    <dd>A resume/portfolio</dd>
-  </dl>
-  <p> My Resume will contain the following:</p>
-  <ul>
-    <li>Contact Information</li>
-    <li>Introduction</li>
-    <li>Education</li>
-    <li>Previous Experience</li>
-    <li>Skills</li>
-    <li>References</li>
-  </ul>
+  <h1 style="font-family: 'Times New Roman';">Welcome</h1>
+  
   <h3>Contact Information</h3>
   <p>Phone:</p>
   <p>Email:</p>
