--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1 style="font-family: 'Times New Roman';">Welcome</h1>
+  <h1 style="font-family: 'Garamond (serif)';">Welcome</h1>
   
   <h3>Contact Information</h3>
   <p>Phone:</p>
