--- a/baking.html
+++ b/baking.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1>Baking</h1>
+<h1 style="font-family: 'Garamond (serif)';">Baking</h1>
 <figure>
   <img
     src="images/chai-cinnamon-rolls.jpeg"
